@@ -4,7 +4,7 @@
 # install tox" and then run "tox" from this directory.
 
 [tox]
-envlist = py27, py32, py33, py34, hi27, hi32, hi33, hi34, pep8-py34, pep8-py27
+envlist = py27, py32, py33, py34, hi27, hi32, hi33, hi34, g27, pep8-py34, pep8-py27
 
 [testenv]
 deps = 
@@ -22,6 +22,16 @@ deps =
     pytest >= 2.5.0
     testfixtures == 4.0.1
     mock == 1.0.1
+
+[testenv:g27]
+basepython = python2.7
+deps =
+    coverage == 3.7.1
+    hiredis >= 0.1.3
+    pytest >= 2.5.0
+    testfixtures == 4.0.1
+    mock == 1.0.1
+    gevent >= 1.0.1
 
 [testenv:hi32]
 basepython = python3.2
